// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meter > render with  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="0"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__1enq5vc1 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          style="--_1enq5vc0: #b3144d;"
        >
          veryWeak
        </span>
      </p>
      <div
        class="styles__1enq5vc2"
      >
        <div
          class="styles__1enq5vc3"
          style="background-color: #b3144d; width: 20%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with medium password 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="2"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__1enq5vc1 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          style="--_1enq5vc0: yellow;"
        >
          medium
        </span>
      </p>
      <div
        class="styles__1enq5vc2"
      >
        <div
          class="styles__1enq5vc3"
          style="background-color: yellow; width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with strong value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="3"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__1enq5vc1 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          style="--_1enq5vc0: #22674e;"
        >
          strong
        </span>
      </p>
      <div
        class="styles__1enq5vc2"
      >
        <div
          class="styles__1enq5vc3"
          style="background-color: #22674e; width: 80%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with very strong value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="4"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__1enq5vc1 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          style="--_1enq5vc0: #22674e;"
        >
          veryStrong
        </span>
      </p>
      <div
        class="styles__1enq5vc2"
      >
        <div
          class="styles__1enq5vc3"
          style="background-color: #22674e; width: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with weak value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="1"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__1enq5vc1 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_72__m4c9ow3f"
          style="--_1enq5vc0: #7c5400;"
        >
          weak
        </span>
      </p>
      <div
        class="styles__1enq5vc2"
      >
        <div
          class="styles__1enq5vc3"
          style="background-color: #7c5400; width: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
